[WIP] stabilizing halfa